--- a/public/profile.html
+++ b/public/profile.html
@@ -1132,7 +1132,8 @@
                             <input type="text" 
                                    class="reward-card-code-input" 
                                    value="${codeVal}" 
-                                   readonly 
+                                   readonly
+                                   style="color: #ffffff; font-family: monospace; font-weight: bold;"
                                    data-id="secret_${codeVal}"
                                    onclick="this.select();" 
                             >
