--- a/public/profile.html
+++ b/public/profile.html
@@ -1088,6 +1088,7 @@
     }
 
     // --- ОТРИСОВКА СЕКРЕТНЫХ КОДОВ ---
+    // --- ОТРИСОВКА СЕКРЕТНЫХ КОДОВ ---
     function renderSecretCodes(codes) {
         const container = document.getElementById('secret-list-container');
         const infoBadge = document.getElementById('secret-btn-info');
@@ -1108,15 +1109,24 @@
 
         codes.forEach(codeObj => {
             const codeVal = codeObj.code;
-            // Форматируем дату
+            // Форматируем дату получения
             const dateVal = codeObj.assigned_at 
                 ? new Date(codeObj.assigned_at).toLocaleString('ru-RU', { day: 'numeric', month: 'numeric', hour: '2-digit', minute: '2-digit' })
                 : 'Недавно';
 
+            // 🔥 ДОБАВЛЕНО: Логика отображения статуса "Скопировано" при загрузке 🔥
+            let copiedHtml = '';
+            if (codeObj.copied_at) {
+                const dateCopied = new Date(codeObj.copied_at).toLocaleString('ru-RU', {
+                      day: 'numeric', month: 'numeric', year: 'numeric', hour: '2-digit', minute: '2-digit'
+                });
+                copiedHtml = `<div style="color: #4ade80; font-size: 11px; margin-top: 4px; font-weight: 500;">Скопировано: ${dateCopied}</div>`;
+            }
+
             const el = document.createElement('div');
             el.className = 'reward-card';
             
-            // 🔥 НОВЫЙ СТИЛЬ: ТЕМНЫЙ С ЗОЛОТЫМ АКЦЕНТОМ 🔥
+            // Стиль: ТЕМНЫЙ С ЗОЛОТЫМ АКЦЕНТОМ
             el.style.background = 'rgba(255, 215, 0, 0.05)'; 
             el.style.border = '1px solid rgba(255, 215, 0, 0.2)';
             el.style.position = 'relative';
@@ -1142,7 +1152,7 @@
                             </button>
                         </div>
 
-                        <div id="copied-status-secret_${codeVal}"></div>
+                        <div id="copied-status-secret_${codeVal}">${copiedHtml}</div>
                         
                         <button onclick="window.location.href='/public/cs_roulette.html'" style="
                             display: flex; align-items: center; justify-content: center; gap: 8px;
