--- a/public/profile.html
+++ b/public/profile.html
@@ -737,6 +737,17 @@
             </div>
         </div>
     </div>
+    <div id="notify-popup-overlay" class="custom-popup-overlay">
+        <div class="custom-popup">
+            <div style="display: flex; justify-content: flex-end; width: 100%;">
+                <button id="notify-close-btn" style="background: none; border: none; color: #888; font-size: 20px; cursor: pointer;">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+            <div id="notify-content-area" style="width: 100%;">
+                </div>
+        </div>
+    </div>
     <div id="steam-trust-popup" class="custom-popup-overlay">
     <div class="custom-popup">
         <div style="font-size: 40px; margin-bottom: 10px;">🛡️</div>
