--- a/public/profile.html
+++ b/public/profile.html
@@ -1357,7 +1357,7 @@
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <div class="twitch-error-text">
                     <b>Синхронизация нарушена!</b><br>
-                    Отвяжите и привяжите профиль заново для обновления токена.
+                    Отвяжите и привяжите профиль TWITCH заново для обновления токена.
                 </div>
             `;
             // Добавляем клик по баннеру, чтобы скроллило к кнопке Twitch (для удобства)
