--- a/public/admin.html
+++ b/public/admin.html
@@ -95,6 +95,12 @@
                         <div class="icon-wrapper" style="color: var(--primary-color);"><i class="fa-solid fa-chart-line"></i></div>
                         <span>Статистика</span>
                     </div>
+                  <a href="/admin_raffles.html" class="admin-icon-button">
+                        <div class="icon-wrapper" style="color: #ff2d55; border-color: rgba(255, 45, 85, 0.3);">
+                        <i class="fa-solid fa-ticket"></i>
+                    </div>
+                        <span>Розыгрыши</span>
+                    </a>
                     <a href="/roulette.html" target="_blank" class="admin-icon-button">
                         <div class="icon-wrapper"><i class="fa-solid fa-eye"></i></div>
                         <span>Просмотр рулетки</span>
