--- a/public/admin_raffles.html
+++ b/public/admin_raffles.html
@@ -232,7 +232,24 @@
         tg.expand();
 
         // --- Navigation ---
+        // Системная кнопка "Назад"
+        tg.BackButton.show();
+        tg.BackButton.onClick(() => {
+            // Если открыто модальное окно участников или алерт - закрываем их
+            if (document.getElementById('modal-parts').classList.contains('modal-active')) {
+                closeModal('modal-parts');
+                return;
+            }
+            if (document.getElementById('modal-alert').classList.contains('modal-active')) {
+                closeModal('modal-alert');
+                return;
+            }
+            // Иначе возвращаемся в меню
+            window.location.href = '/admin';
+        });
+
         function goBack() { window.location.href = '/admin'; }
+        
         function switchTab(t) {
             document.querySelectorAll('.tab-content').forEach(e => e.classList.add('hidden'));
             document.querySelectorAll('.tab').forEach(e => e.classList.remove('active'));
