--- a/public/raffles.html
+++ b/public/raffles.html
@@ -26,10 +26,28 @@
         /* --- Header Row --- */
         .header-row { display: flex; justify-content: space-between; align-items: center; margin: 10px 0 20px; }
         h1 { font-size: 28px; font-weight: 800; margin: 0; letter-spacing: -0.5px; }
+        
+        /* 🔥 ОБНОВЛЕННАЯ КНОПКА ИСТОРИИ */
         .history-btn { 
-            background: var(--card); width: 44px; height: 44px; border-radius: 12px; 
-            display: flex; align-items: center; justify-content: center; color: var(--primary); 
-            font-size: 18px; border: 1px solid rgba(255,255,255,0.1); cursor: pointer;
+            background: var(--card); 
+            min-width: 54px; height: 48px; 
+            border-radius: 14px; 
+            display: flex; flex-direction: column; /* Элементы в колонку */
+            align-items: center; justify-content: center; 
+            color: var(--primary); 
+            border: 1px solid rgba(255,255,255,0.1); 
+            cursor: pointer;
+            gap: 2px; /* Расстояние между иконкой и текстом */
+            transition: 0.1s;
+        }
+        .history-btn:active { transform: scale(0.95); background: #2c2c2e; }
+        .history-btn i { font-size: 16px; }
+        .history-btn span { 
+            font-size: 8px; /* Та самая маленькая надпись */
+            font-weight: 800; 
+            text-transform: uppercase; 
+            letter-spacing: 0.5px; 
+            color: var(--sec); /* Сделаем её чуть приглушенной */
         }
 
         /* --- Cards --- */
@@ -38,7 +56,7 @@
             position: relative; animation: slideUp 0.4s ease; 
             border: 1px solid rgba(255,255,255,0.08); 
         }
-        .card.done { opacity: 0.8; border-color: transparent; filter: none; } /* Оставил видимым как просил */
+        .card.done { opacity: 0.8; border-color: transparent; filter: none; }
         
         .c-body { display: flex; gap: 14px; }
         .prize-img { 
@@ -57,7 +75,6 @@
         }
         .cond-row i { color: var(--primary); width: 16px; text-align: center; font-size: 13px; }
 
-        /* --- Buttons --- */
         .btn { 
             width: 100%; border: none; padding: 14px; border-radius: 14px; 
             font-size: 15px; font-weight: 700; cursor: pointer; margin-top: 14px; 
@@ -68,7 +85,6 @@
         .btn-joined { background: rgba(50, 215, 75, 0.15); color: var(--green); cursor: default; }
         .btn-done { background: rgba(255,255,255,0.1); color: var(--sec); cursor: default; }
 
-        /* --- Winner --- */
         .winner { 
             margin-top: 12px; background: rgba(255, 215, 0, 0.08); 
             border: 1px solid rgba(255, 215, 0, 0.15); border-radius: 12px; 
@@ -77,7 +93,6 @@
         .w-lbl { font-size: 11px; color: var(--primary); font-weight: 800; text-transform: uppercase; letter-spacing: 1px; opacity: 0.8; }
         .w-name { font-weight: 700; font-size: 15px; margin-top: 4px; color: #fff; }
 
-        /* --- History Container Overlay --- */
         .history-overlay {
             position: fixed; inset: 0; background: var(--bg); z-index: 100;
             padding: 16px; overflow-y: auto; display: none;
@@ -87,7 +102,6 @@
         .history-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
         .close-x { font-size: 26px; color: var(--sec); cursor: pointer; padding: 5px; }
 
-        /* --- Close Button Bottom --- */
         .close-container { 
             position: fixed; bottom: 30px; left: 0; right: 0; 
             display: flex; justify-content: center; z-index: 10; pointer-events: none; 
@@ -98,7 +112,6 @@
             cursor: pointer; font-size: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
-        /* --- Modals & Anims --- */
         .modal-overlay { 
             position: fixed; inset: 0; background: rgba(0,0,0,0.85); 
             backdrop-filter: blur(20px); z-index: 999; display: none; 
@@ -147,6 +160,7 @@
         <h1>Розыгрыши</h1>
         <div class="history-btn" onclick="openHistory()">
             <i class="fa-solid fa-clock-rotate-left"></i>
+            <span>История</span>
         </div>
     </div>
 
@@ -188,7 +202,6 @@
         tg.expand();
         tg.BackButton.hide();
 
-        // Функции управления историей
         function openHistory() {
             document.getElementById('history-overlay').classList.add('active');
             tg.HapticFeedback.impactOccurred('light');
@@ -281,7 +294,6 @@
                     ${winnerBlock}
                 </div>`;
 
-                // РАСПРЕДЕЛЕНИЕ ПО КОНТЕЙНЕРАМ
                 if (done) historyList.innerHTML += cardHtml;
                 else list.innerHTML += cardHtml;
             });
